--- a/source/_posts/ディープラーニングで歌声音声合成エンジンを自作する.md
+++ b/source/_posts/ディープラーニングで歌声音声合成エンジンを自作する.md
@@ -79,6 +79,13 @@ permalink: create-singing-engine-with-deep-learning
 
 　結果を聞くと、ノイズのような歌声になってしまうことがわかりました。これは・・・なんでこうなるのか、全く見当がつきません。ディープラーニングはこんな感じで、問題が発生したとき、その問題が真に解決不可能なのか、それともただプログラムがバグっているだけなのかを切り分けづらく、もやもやすることがあります。今回のこの問題は、原因不明です。
 
+　（2019/12/08追記）声の大きさラベルの値を全体的に小さくしてみたところ、品質がかなり上がりました。ディープラーニングなにもわからない。
+
+<figure>
+  <figcaption>声の大きさラベルの値を小さくしたときの歌唱デモ</figcaption>
+  <audio src="demo-w-volume-2.wav" controls></audio>
+</figure>
+
 ### ディープラーニング周りの紹介
 
 　音声合成エンジンの作成にはディープラーニング、つまり機械学習を用いています。ここでは、今回用いた用いディープラーニング手法や、学習データの前処理を紹介します。ここはちょっと技術寄りの説明になります。
