add niconico movie

--- a/source/_posts/ディープラーニングの力で誰でもゆかりさんの声になれる声変換技術を作ってみた.md
+++ b/source/_posts/ディープラーニングの力で誰でもゆかりさんの声になれる声変換技術を作ってみた.md
@@ -79,6 +79,10 @@ categories:
   <audio src="5-yukari.wav" controls></audio>
 </figure>
 
+### デモ動画
+
+<center><script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm38028036/script?w=320&h=180"></script><noscript><a href="https://www.nicovideo.jp/watch/sm38028036">ディープラーニングの力で誰でもゆかりさんの声になれる声変換技術を作ってみた</a></noscript></center>
+
 ### 終わりに
 
 　この技術はエンタメ分野などでいろんな面白いことに使えるかもしれません。なにかお手伝い・ご協力できることがあれば、ツイッター（[@hiho_karuta](https://twitter.com/hiho_karuta)）等でぜひお気軽にお声掛けください。
